# Web_automation

./: .env.template  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini
configs/: dev.yaml  logger_config.json  prod.yaml  test.yaml
framework/: env_manager.py
framework/api/: auth_api.py  loans_api.py  personal_data_api.py
framework/api/core/: http_client.py
framework/data_base/: db_client.py
framework/logger/: logger.py
framework/ui/core/: base_element.py  base_page.py  browser_manager.py
framework/ui/elements/: button.py  input_field.py
framework/ui/pages/: example_page.py  home_page.py  login_page.py
framework/utils/: utils.py
pretty-autotests-main/: .env.template  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini
pretty-autotests-main/framework/utils/: utils.py
pretty-autotests-main/tests/: conftest.py
tests/: conftest.py
tests/api/: conftest.py  test_auth.py  test_card_products_api.py  test_example_api.py  test_personal_data.py
tests/api/data/: test_auth_data.yaml  test_personal_data.yaml
tests/api/epic_1_welcome_page/: conftest.py  test_personal_data.py
tests/db/: test_queries.py
tests/ui/: conftest.py  test_example_ui.py  test_home_page.py  test_login.py
tests/ui/data/: home_page_data.py  login_data.py
