[project]
name = "pretty-autotests"
version = "0.1.0"
description = ""
authors = [
    {name = "g.khabazishvili@andersenlab.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "playwright (>=1.56.0,<2.0.0)",
    "pytest (>=8.3.0,<9.0.0)",
    "allure-pytest (>=2.15.0,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "faker (>=38.0.0,<39.0.0)",
    "pytest-playwright (>=0.7.1,<0.8.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "pytest-check (>=2.6.0,<3.0.0)",
    "jsonschema (>=4.25.1,<5.0.0)",
    "assertpy (>=1.1,<2.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "pre-commit (>=4.4.0,<5.0.0)",
    "qaseio (>=4.0.2,<5.0.0)",
    "qase-pytest (>=7.0.6,<8.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
